--- a/src/system/footer/template.html
+++ b/src/system/footer/template.html
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-default">
+<footer class="navbar navbar-default app-footer">
     <div class="container">
         <p class="navbar-text">Copyright &copy; 2017</p>
     </div>
